plugins {
    id 'java'
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

dependencies {
    implementation project(':db')
}

final commonCompilerArgs = "--enable-preview"
allprojects {
    apply plugin: 'java'

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation 'org.slf4j:slf4j-api:1.7.32'
        implementation 'org.slf4j:slf4j-log4j12:1.7.32'

        testImplementation 'junit:junit:4.13.2'
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs += commonCompilerArgs
    }

    tasks.withType(Test) {
        jvmArgs += commonCompilerArgs
    }
}

application {
    mainClass = 'cellarium.Main'
}